# JSON

./: .gitignore  CMakeLists.txt  Doxyfile  JSON.sln  JSON.vcxproj  JSON.vcxproj.filters  README.md
.github/workflows/: ci.yml
Tests/: CMakeLists.txt  main.cpp
Tests/data/: appends.json  contains.json  minimize.json  utf8.json
Tests/include/: Utils.h
Tests/src/: JSONBuilderTests.cpp  JSONObjectTests.cpp  JSONParserTests.cpp  Utils.cpp
Tests/src/cases/: JsonBuilderTests.cpp  JsonObjectTests.cpp  JsonParserTests.cpp  JsonRecursiveIteratorTests.cpp
docs/: _base_j_s_o_n_exception_8h_source.html  _cant_find_value_exception_8h_source.html  _code_page_constants_8h_source.html  _j_s_o_n_array_wrapper_8h_source.html  _j_s_o_n_builder_8h_source.html  _j_s_o_n_parser_8h_source.html  _j_s_o_n_utility_8h_source.html  _json_array_wrapper_8h_source.html  _json_builder_8h_source.html  _json_object_8h_source.html  _json_parser_8h_source.html  _json_utility_8h_source.html  _output_operations_8h_source.html  _recursive_j_s_o_n_iterator_8h_source.html  _recursive_json_iterator_8h_source.html  _utils_8h_source.html  _wrong_encoding_exception_8h_source.html  _wrong_input_stream_exception_8h_source.html  annotated.html  annotated_dup.js  bin_2_production_release-_win32_2_j_s_o_n_2_j_s_o_n_builder_8h_source.html  bin_2_production_release-_win32_2_j_s_o_n_2_j_s_o_n_parser_8h_source.html  bin_2_production_release-_win32_2_j_s_o_n_2_j_s_o_n_utility_8h_source.html  bin_2_production_release-x64_2_j_s_o_n_2_j_s_o_n_builder_8h_source.html  bin_2_production_release-x64_2_j_s_o_n_2_j_s_o_n_parser_8h_source.html  bin_2_production_release-x64_2_j_s_o_n_2_j_s_o_n_utility_8h_source.html  bin_2_production_release_d_l_l-_win32_2_j_s_o_n_2_j_s_o_n_builder_8h_source.html  bin_2_production_release_d_l_l-_win32_2_j_s_o_n_2_j_s_o_n_parser_8h_source.html  bin_2_production_release_d_l_l-_win32_2_j_s_o_n_2_j_s_o_n_utility_8h_source.html  bin_2_production_release_d_l_l-x64_2_j_s_o_n_2_j_s_o_n_builder_8h_source.html  bin_2_production_release_d_l_l-x64_2_j_s_o_n_2_j_s_o_n_parser_8h_source.html  bin_2_production_release_d_l_l-x64_2_j_s_o_n_2_j_s_o_n_utility_8h_source.html  classes.html  classjson_1_1_j_s_o_n_builder-members.html  classjson_1_1_j_s_o_n_builder.html  classjson_1_1_j_s_o_n_builder.js  classjson_1_1_j_s_o_n_parser-members.html  classjson_1_1_j_s_o_n_parser.html  classjson_1_1_j_s_o_n_parser.js  classjson_1_1_j_s_o_n_parser_1_1_const_iterator-members.html  (+497 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_f.js  concepts_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  (+14 more)
include/: JsonBuilder.h  JsonObject.h  JsonParser.h  JsonUtility.h  MapJsonIterator.h  OutputOperations.h  RecursiveJsonIterator.h
include/Exceptions/: CantFindValueException.h  WrongInputStreamException.h
src/: CodePageConstants.h  JSONArrayWrapper.cpp  JSONArrayWrapper.h  JSONBuilder.cpp  JSONBuilder.h  JSONParser.cpp  JSONParser.h  JSONUtility.cpp  JSONUtility.h  JsonArrayWrapper.cpp  JsonArrayWrapper.h  JsonBuilder.cpp  JsonBuilder.h  JsonObject.cpp  JsonObject.h  JsonParser.cpp  JsonParser.h  JsonUtility.cpp  JsonUtility.h  MapJsonIterator.cpp  OutputOperations.cpp  OutputOperations.h  RecursiveIterator.cpp  RecursiveIterator.h  RecursiveJSONIterator.cpp  RecursiveJSONIterator.h  RecursiveJsonIterator.cpp  RecursiveJsonIterator.h
src/Exceptions/: BaseJSONException.cpp  BaseJSONException.h  CantFindValueException.cpp  CantFindValueException.h  WrongEncodingException.cpp  WrongEncodingException.h  WrongInputStreamException.cpp  WrongInputStreamException.h
